@@ -23,11 +23,8 @@
 
 $:.unshift File.dirname(__FILE__)
 
-
-
 require 'rubygems'
 require 'active_support'
-require 'ftools'
 
 require 'vendor/xml_node/lib/xml_node'
 require 'vendor/quantified/lib/quantified'
